--- a/responsive.css
+++ b/responsive.css
@@ -249,18 +249,18 @@ h2 {
   justify-content: center;
 }
 
-#bromon-facts .flex-container figure {
+#bromo-facts .flex-container figure {
   text-align: center;
 }
 
-#bromon-photos .grid-container {
+#bromo-photos .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 8px;
   grid-auto-rows: 240px 240px 240px;
 }
 
-#bromon-photos .grid-container img {
+#bromo-photos .grid-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -286,7 +286,7 @@ fieldset {
   margin: 0;
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  border-color: #bd8f07;
+  border-color: #2196f3;
 }
 
 .form-personal {
@@ -387,16 +387,16 @@ button {
 }
 
 button:hover {
-  background-color: #bd8f07;
+  background-color: #2196f3;
   transition: 0.5s;
 }
 
-.bromon-photo-item {
-  filter: grayscale(100%);
+.bromo-photo-item {
+  filter: grayscale(50%);
   cursor: pointer;
 }
 
-.bromon-photo-item:hover {
+.bromo-photo-item:hover {
   filter: none;
   transition-property: filter;
   transition-duration: 1s;
@@ -404,33 +404,33 @@ button:hover {
 
 /* for tablet and desktop */
 @media only screen and (min-width: 768px) {
-  #bromon-facts > .flex-container {
+  #bromo-facts > .flex-container {
     display: flex;
     align-items: center;
   }
 
-  #bromon-facts > .flex-container figure {
+  #bromo-facts > .flex-container figure {
     margin-left: auto;
   }
 
-  #bromon-facts > .flex-container figure img {
+  #bromo-facts > .flex-container figure img {
     height: 400px;
   }
 
-  #bromon-facts > .flex-container figcaption {
+  #bromo-facts > .flex-container figcaption {
     text-align: center;
     margin-top: 16px;
   }
 
-  #bromon-facts > .flex-container.row-reverse {
+  #bromo-facts > .flex-container.row-reverse {
     flex-direction: row-reverse;
   }
 
-  #bromon-facts > .flex-container.row-reverse p {
+  #bromo-facts > .flex-container.row-reverse p {
     margin-left: 32px;
   }
 
-  #bromon-facts > .flex-container.row-reverse figure {
+  #bromo-facts > .flex-container.row-reverse figure {
     margin-left: 40px;
     min-width: 320px;
   }
@@ -439,14 +439,14 @@ button:hover {
     max-width: 480px;
   }
 
-  #bromon-photos .grid-container {
+  #bromo-photos .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 16px;
     grid-auto-rows: 320px 320px;
   }
 
-  #bromon-photos .grid-container img {
+  #bromo-photos .grid-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
